--- a/MobilePoint/Views/Home/Index.cshtml
+++ b/MobilePoint/Views/Home/Index.cshtml
@@ -3,6 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Добре дошли в Mobile<span class="point" style="color:red">Point</span></h1>
 </div>
