--- a/MobilePoint/Views/Phones/Index.cshtml
+++ b/MobilePoint/Views/Phones/Index.cshtml
@@ -19,6 +19,9 @@
                 @Html.DisplayNameFor(model => model.Color)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.ImageURL)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
@@ -35,6 +38,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Color)
+            </td>
+            <td>
+                <img src="@Html.DisplayFor(modelItem => item.ImageURL)" width="100">
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
