Card for Phones

--- a/MobilePoint/Views/Home/Index.cshtml
+++ b/MobilePoint/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<div class="welcome">
 <div class="text-center">
     <h1 class="display-4">Добре дошли в Mobile<span class="point" style="color:red">Point</span></h1>
+</div>
+<div class="img">
+<img src="https://i0.wp.com/abizot.com.ng/wp-content/uploads/2022/09/iPhone-14-Pro-Max-512GB.png?fit=770%2C770&ssl=1" width="500" />
+    </div>
 </div>
