--- a/MobilePoint/Views/Phones/Details.cshtml
+++ b/MobilePoint/Views/Phones/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.ImageURL)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageURL)
+            <img src="@Html.DisplayFor(model => model.ImageURL)" width="100" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
