--- a/MobilePoint/Views/Phones/Index.cshtml
+++ b/MobilePoint/Views/Phones/Index.cshtml
@@ -7,9 +7,32 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
+
+@foreach (var item in Model)
+{
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="@Html.DisplayFor(modelItem => item.ImageURL)" height="100%"alt="Card image cap">
+    <div class="card-body">
+            <h5 class="card-title">@Html.DisplayFor(modelItem => item.BrandModels.Brand) @Html.DisplayFor(modelItem => item.BrandModels.Model)</h5>           
+            <p class="card-text">@Html.DisplayFor(modelItem => item.BrandModels.Specification)</p>
+            <p class="card-subtitle">@Html.DisplayFor(modelItem => item.Price)лв</p>
+        <a class="btn btn-primary"asp-controller="Orders" asp-action="Create" asp-route-id="@item.Id">Купи</a>
+        @if(User.IsInRole("Admin"))
+        {
+             <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+             <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
+             <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            }
+            else
+            {
+              <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+            }
+        </div>
+</div>
+} 
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -58,3 +81,4 @@
 }
     </tbody>
 </table>
+*@
