--- a/MobilePoint/Views/Home/Index.cshtml
+++ b/MobilePoint/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 <div class="welcome">
 <div class="text-center">
-    <h1 class="display-4">Добре дошли в Mobile<span class="point" style="color:red">Point</span></h1>
+        <h1 class="display-4">Добре дошли в Mobile<span class="point" style="color:#007bff">Point</span></h1>
 </div>
 <div class="img">
 <img src="https://i0.wp.com/abizot.com.ng/wp-content/uploads/2022/09/iPhone-14-Pro-Max-512GB.png?fit=770%2C770&ssl=1" width="500" />
