--- a/MobilePoint/Views/Orders/Index.cshtml
+++ b/MobilePoint/Views/Orders/Index.cshtml
@@ -4,11 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 style="color:#007bff">Поръчки</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
